Add the script for resetting devices, e.g., phy, qsfp, etc.
Change-Id: Iccb9e0b08511a9bc23c778a38ec7d8f03f8e01c1

--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 export INSTALL_MOD_DIR:=extra
 
 PACKAGE_NAME   := sonic-platform-arista
-SCRIPT_FILES   := init clean prefdl
+SCRIPT_FILES   := init clean prefdl reset
 SERVICE_FILES  := arista-drivers-init.service
 
 KVERSION       ?= $(shell uname -r)
