Clear fault register prior to loading the pmbus driver for 7050QX-32
Change-Id: I1d970565bb1b92c0bbc48fa70bdb8665f0c87b4b

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 1.0.0
 
 Package: sonic-platform-arista
 Architecture: amd64
-Depends: linux-image-3.16.0-4-amd64
+Depends: linux-image-3.16.0-4-amd64, i2c-tools
 Description: kernel modules for arista platform devices such as fan, led, sfp
 
