--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,23 @@ Source: sonic-platform-arista
 Section: main
 Priority: extra
 Maintainer: Samuel Angebault <staphylo@arista.com>
-Build-Depends: debhelper (>= 8.0.0), bzip2
+Build-Depends:
+   ${python:Depends},
+   ${misc:Depends},
+   dh-python,
+   debhelper (>= 8.0.0),
+   bzip2
 Standards-Version: 1.0.0
+X-Python-Version: >= 2.6
+X-Python3-Version: >= 3.2
 
 Package: sonic-platform-arista
 Architecture: amd64
-Depends: linux-image-3.16.0-4-amd64, i2c-tools
+Depends:
+   ${python:Depends},
+   ${misc:Depends},
+   linux-image-3.16.0-4-amd64,
+   python-smbus,
+   i2c-tools
 Description: kernel modules for arista platform devices such as fan, led, sfp
 
