Provide the TlvInfoDecoder object to parse the syseeprom
The eeprom parsing code has been moved to the driver library for easier
reusability accross platforms. The eeprom plugins can now just import
arista.utils.sonic to get the TlvInfoDecoder class.

Change-Id: Ia1b9b69ae9830a4498598502b4c016c6f4b6d0ae

--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ export INSTALL_MOD_DIR:=extra
 PYTHON         ?= python2
 
 PACKAGE_NAME   := sonic-platform-arista
-SCRIPT_FILES   := prefdl reset
+SCRIPT_FILES   := reset
 BIN_FILES      := arista
 SERVICE_FILES  := arista-drivers-init.service
 
