Added boot-eos script
This python script allows us to reboot from SONiC to EOS

Change-Id: I687d9725f38661429613a7932e18cf8b5b22803b

--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,7 @@ PYTHON         ?= python2
 
 PACKAGE_NAME   := sonic-platform-arista
 SCRIPT_FILES   := reset
-BIN_FILES      := arista
+BIN_FILES      := arista boot-eos
 SERVICE_FILES  := arista-drivers-init.service
 
 KVERSION       ?= $(shell uname -r)
