--- a/src/Makefile
+++ b/src/Makefile
@@ -4,3 +4,4 @@ obj-m += sonic-support-driver.o
 obj-m += crow-fan-driver.o
 obj-m += raven-fan-driver.o
 obj-m += rook-led-driver.o
+obj-m += rook-fan-cpld.o
