--- a/src/Makefile
+++ b/src/Makefile
@@ -3,3 +3,4 @@ obj-m += scd-hwmon.o
 obj-m += sonic-support-driver.o
 obj-m += crow-fan-driver.o
 obj-m += raven-fan-driver.o
+obj-m += rook-led-driver.o
