Add file logging support
When providing the -l <logfile> option, all the actions will be written
in the logfile with a debug verbosity. The -v option will still be
required to increase the verbosity on stdout.
Logging will be enabled by default in the initscripts.

Change-Id: Id12111969f9b97ffa39959b2e4be002a76eb0380

--- a/confs/arista-drivers-init.service
+++ b/confs/arista-drivers-init.service
@@ -6,8 +6,8 @@ ConditionKernelCommandLine=Aboot
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/arista setup --reset
-ExecStop=/usr/bin/arista clean
+ExecStart=/usr/bin/arista -l /var/log/arista.log setup --reset --background
+ExecStop=/usr/bin/arista -l /var/log/arista.log clean
 RemainAfterExit=yes
 
 [Install]
