Fix typo in arista-drivers.service
Change-Id: Ide2a8c999ed2bb0cfc006dbae908d2c342fd2ae4

--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ PYTHON         ?= python2
 PACKAGE_NAME   := sonic-platform-arista
 SCRIPT_FILES   := reset
 BIN_FILES      := arista boot-eos
-SERVICE_FILES  := arista-drivers-init.service
+SERVICE_FILES  := arista-drivers.service
 
 KVERSION       ?= $(shell uname -r)
 KERNEL_SRC     ?= /lib/modules/$(KVERSION)/build
