--- a/confs/arista-drivers.service
+++ b/confs/arista-drivers.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Arista kernel modules init
 After=local-fs.target
-Before=opennsl-modules-3.16.0-4-amd64.service`
+Before=opennsl-modules-3.16.0-4-amd64.service
 ConditionKernelCommandLine=Aboot
 
 [Service]
